tests/test_files_pa3/SemanticErrors/LocalVariableAssigmentFromFieldWithBadType.ic
class A {
		
	string a;
	void sfunc() {
		int a = a;
	}
	
	static void main(string[] args) { }
	
}